# c-graphing-calculator

./: CMakeLists.txt  Makefile  main.c  readmi.texi  test.c
src/: Makefile  check.c  error_handling.c  error_handling.h  grammar.c  grammar.h  infix_to_postfix.c  infix_to_postfix.h  main.c  postfix_evaluation.c  postfix_evaluation.h  smartcalc.c  smartcalc.h  strutils.c  strutils.h  temp.c  tkn_linkedl.c  tkn_linkedl.h  tkn_queuearr.c  tkn_stackarr.c  tkn_stackarr.h  token.h  tokenization.c  tokenization.h  tokenizer.c
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/app/forms/: creditcalc.ui  depositcalc.ui
src/app/src/: creditcalc.cpp  creditcalc.hpp  depositcalc.cpp  depositcalc.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp
src/lib/: CMakeLists.txt
src/lib/docs/: CMakeLists.txt  Doxyfile.in
src/lib/include/: smartcalc.h
src/lib/src/: credit_mode.c  deposit_mode.c  error_handling.c  grammar.c  grammar.h
src/lib/src/data_structures/: tkn_linkedl.h  tkn_queuearr.c  tkn_queuearr.h
src/lib/src/processing/: expression_handler.c  infix_to_postfix.c  postfix_evaluation.c  postfix_evaluation.h  tokenization.c  tokenization.h
src/lib/src/utils/: stringutils.c  stringutils.h
src/lib/test/: CMakeLists.txt  run_container.sh
src/lib/test/suites/: infix_evaluate.check  infix_to_postfix.check
src/lib/tests/: CMakeLists.txt  credit.check  deposit.check  dispensable.check  infix_evaluate.check  infix_to_postfix.check
task/: README.md
test/: Dockerfile.ubuntu
